# bmi-example-python-parameter-study

./: .dockerignore  .gitignore  Dockerfile  README.md  container.def  heat.yaml  pyproject.toml  requirements.txt  run.py
src/bmiheat_parameter_study/: __init__.py  config.py
src/bmiheatps/: __init__.py  cli.py  config.py  study.py
study/: bmi-heat.sub  run-osg.sh  run-parameter-study.sh  run-parameter-study.sub  study-config.yaml
tests/: test_config.py
tests/data/: heat.yaml  study-config.yaml
